--- a/index.html
+++ b/index.html
@@ -15,19 +15,35 @@
 
 
     <h1>Our Menu</h1>
-    <div class="con1">
-        <p class="chicken" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <h2 class="chickenh2">Chicken</h2>
-    </div>
 
-    <div class="con2">
-        <p class="beef">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <h2 class="beefh2">Beef</h2>
-    </div>
+      
+  <div class="row">
+            <div class="con col-lg-4 col-md-6 col-sm-12">
+                <section>
 
-    <div class="con3" class="hello">
-        <p class="sushi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <h2 class="sushih2">Sushi</h2>
+                    <p class="chickenh2">Chicken</p>
+                <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                
+                </section>
+
+            </div>
+
+            <div class="con col-lg-4 col-md-6 col-sm-12" >
+                <section>
+                    <p class="beefh2">Beef</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </section>
+            </div>
+
+            <div class="con col-lg-4 col-md-12 col-sm-12" >
+                <section>
+                    <h2 class="sushih2">Sushi</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+            </section>
+            </div>
+
     </div>
 
 </body>
